# osr

./: .clang-tidy.in  .gitignore  .pkg  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: ci.yml
cmake/: buildcache.cmake  clang-tidy.cmake
docs/: mmap.supp  pthread.supp  tbb.supp
exe/: benchmark.cc  benchmark_bidir.cc  count.cc  extract.cc  preprocessing.cc  serve.cc  test.cc
exe/backend/include/osr/backend/: http_server.h  json.h  osrm.h
exe/backend/src/: http_server.cc  main.cc
exe/osr-preprocessing/: main.cc
fuzz/: CMakeLists.txt  fuzz.cc
include/osr/: bike_parkings.h  buf_io.h  conditional.h  config.h  db.h  debug.h  dial.h  dijkstra.h  elevation.h  elevation_storage.h  extract.h  geojson.h  graph.h  infinite.h  location.h  lookup.h  match_view.h  meta.h  mmap_vec.h  multi_counter.h  node_info.h  paged.h  platforms.h  point.h  profiles.h  route.h  to_geojson.h  types.h  way_info.h  ways.h  weight.h
include/osr/extract/: conditional_parser.h  extract.h  low_emission_zone.h  osm_areas.h  tag_parser.h  tags.h
include/osr/preprocessing/: ch_preprocessing.h
include/osr/preprocessing/contraction_hierarchies/: ch_dijkstra.h  contractor.h  node_order_strategy.h  preprocessor.h  storage.h
include/osr/preprocessing/contraction_hierarchy/: contraction.h  node_order.h  shortcut_storage.h
include/osr/preprocessing/elevation/: dem_driver.h  dem_grid.h  dem_source.h  dem_tile.h  elevation.h  hgt.h  hgt_def.h  hgt_driver.h  hgt_raster.h  hgt_tile.h  hgt_tile_def.h  location.h  provider.h  resolution.h  shared.h  step_size.h
include/osr/routing/: a_star.h  additional_edge.h  algorithms.h  astar.h  bidirectional.h  bidirectional_dijkstra.h  bike.h  car.h  ch.h  ch_dijkstra.h  conditional.h  contraction_hierarchies.h  contraction_hierarchies_m_to_n.h  dial.h  dijkstra.h  foot.h  map_matching.h  map_matching_data.h  map_matching_debug.h  mode.h  parameters.h  path.h  path_reconstruction.h  profile.h  route.h  sharing_data.h  td.h  tracking.h  turns.h  with_profile.h
include/osr/routing/instructions/: directions.h  instruction_annotator.h  instruction_util.h  meta_data.h  module.h  routing_instruction.h
include/osr/routing/instructions/modules/: destination_module.h  intersection_module.h  motorway_module.h  pedestrian_module.h  roundabout_module.h
include/osr/routing/profiles/: bike.h  bike_elevation.h  bike_parking.h  bike_sharing.h  bus.h  car.h  car_foot.h  car_parking.h  car_sharing.h  combi_profile.h  common.h  ferry.h  foot.h  hgv.h  hybrid.h  railway.h  transitions.h  wheelchair.h
include/osr/util/: multi_counter.h  reverse.h  sliding_window.h
mm-debug-ui/: AGENTS.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
mm-debug-ui/src/: App.css  App.tsx  index.css  main.tsx  store.tsx  types.ts
mm-debug-ui/src/components/: InspectorPanel.tsx  Map.tsx  PointsPanel.tsx  RoutePanel.tsx  SegmentPanel.tsx  Sidebar.tsx
mm-debug-ui/src/components/ui/: alert-dialog.tsx  combobox.tsx  field.tsx  input-group.tsx  select.tsx  tabs.tsx
mm-debug-ui/src/lib/: bounds.ts  segment-debug.ts
src/: bike_parkings.cc  config.cc  db.cc  elevation.cc  elevation_storage.cc  extract.cc  graph.cc  lookup.cc  map_matching.cc  map_matching_debug.cc  route.cc  to_geojson.cc  ways.cc
src/extract/: conditional_parser.cc  low_emission_zone.cc  osm_areas.cc  tag_parser.cc
src/preprocessing/contraction_hierarchies/: contractor.cc  preprocessor.cc  storage.cc
src/preprocessing/elevation/: dem_driver.cc  dem_grid.cc  dem_source.cc  dem_tile.cc  hgt.cc  hgt_driver.cc  hgt_raster.cc  hgt_tile.cc  provider.cc
src/routing/: mode.cc  parameters.cc  profile.cc
src/routing/instructions/: directions.cc  instruction_annotator.cc  instruction_util.cc  meta_data.cc  routing_instruction.cc
src/routing/instructions/modules/: destination_module.cc  intersection_module.cc  motorway_module.cc  pedestrian_module.cc  roundabout_module.cc
test/: a17-barrier-access-yes.osm.pbf  ajaccio-ferry.osm.pbf  aplerbeck.osm.pbf  ballwill-shortcut.osm.pbf  biarritz-roundabouts.osm.pbf  bike_parkings_test.cc  conditional_extract_test.cc  conditional_match_test.cc  conditional_parser_test.cc  da_hbf.osm  da_hbf_2.osm.pbf  darmstadt-bismarckstr.osm.pbf  darmstadt-schloß-pbf.osm.pbf  darmstadt-willy-luisenplatz-highway-busway.osm.pbf  dijkstra_astarbidir_test.cc  dijkstra_bidir_contraction_test.cc  dijkstra_ch_test.cc  dijkstra_contraction_hierarchies_test.cc  dijkstrabidir_test.cc  elevation_cost_test.cc  extract_test.cc  frankfurter-kreuz.osm.pbf  garmisch.osm.pbf  gdynia-kariny.osm.pbf  hamburg-hafen-ferry.osm.pbf  hgv_routing_test.cc  instruction-test-cases.json  karlsruhe-kirchfeld.osm.pbf  karlsruhe-kit-nord.osm.pbf  komponistenviertel-darmstadt-pbf.osm.pbf  level_test.cc  locarno.osm.pbf  london-corridor.osm.pbf  london-northern-line.osm.pbf  luisenplatz-darmstadt.osm.pbf  lvl_wildcard_test.cc  main.cc  map.osm  map.osm.pbf  map_matching_test.cc  (+25 more)
test/include/: test_util.h
test/include/osr/routing/: routing_test_util.h
test/include/osr/routing/instructions/: routing_instructions_input.h  routing_instructions_test_fixture.h
test/restriction_test_elevation/: create_data.py  elevations_1.bil  elevations_1.hdr
test/routing/: profile.cc
test/routing/instructions/: routing_instruction_test.cc  routing_instruction_tests.cc  routing_instructions_input.cc  routing_instructions_test_fixture.cc
test/routing/instructions/data/: spessartring-fiedlerweg-darmstadt-pbf.osm.pbf  test-cases.json
web/: .prettierignore  index.html  style.js
web/css/: index.css
web/js/: L.Routing.PPR.js  geojson-overlay.js  index.js  map-links.js  profiles.js
