if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    add_executable(osr-mmm-fuzz-main EXCLUDE_FROM_ALL fuzz.cc)
    target_link_libraries(osr-mmm-fuzz-main osr -fsanitize=address,undefined)
    target_compile_options(osr-mmm-fuzz-main PRIVATE -g -O0)
    target_compile_definitions(osr-mmm-fuzz-main PRIVATE MAIN)

    add_executable(osr-mmm-fuzz EXCLUDE_FROM_ALL fuzz.cc)
    target_link_libraries(osr-mmm-fuzz osr -fsanitize=address,undefined,fuzzer)
    target_compile_options(osr-mmm-fuzz PRIVATE -g -O0 -fsanitize=address,fuzzer)
endif ()